atualizações nos textos

--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
 
             <div class="bonus-highlight">
                 <div class="bonus-content">
-                    <h3>🎉 Bônus Especial: 30 Dias de Acesso à Comunidade</h3>
-                    <p>Participe do grupo exclusivo com mulheres que estão no mesmo processo, receba motivação diária e tire dúvidas durante todo o seu plano</p>
+                    <h3>🎉 Bônus Especial: 30 Dias no Canal de Dicas</h3>
+                    <p>Tenha acesso a um canal exclusivo com conteúdos e dicas diárias para apoiar seu plano. Observação: não há interação entre participantes, é um canal informativo.</p>
                 </div>
             </div>
         </div>
@@ -424,12 +424,12 @@
 
                 <div class="faq-item">
                     <h3>Vou ter apoio durante o processo?</h3>
-                    <p>Sim! Você terá acesso por 30 dias à comunidade exclusiva onde pode trocar experiências e receber motivação constante.</p>
+                    <p>Sim! Você terá acesso por 30 dias a um canal exclusivo de dicas com conteúdos motivacionais e orientações. Observação: não há interação entre participantes, é um canal informativo.</p>
                 </div>
 
                 <div class="faq-item">
                     <h3>Por quanto tempo tenho acesso ao material?</h3>
-                    <p>O acesso ao e-book é vitalício. Você pode refazer os ciclos quantas vezes quiser. A comunidade é o bônus de 30 dias.</p>
+                    <p>O acesso ao e-book é vitalício. Você pode refazer os ciclos quantas vezes quiser. O canal de dicas é o bônus de 30 dias.</p>
                 </div>
 
                 <div class="faq-item">
@@ -453,7 +453,7 @@
                     <div class="offer-badge">🔥 OFERTA LIMITADA</div>
                     
                     <h2 class="offer-title">Comece Sua Transformação Hoje</h2>
-                    <p class="offer-subtitle">Acesso imediato ao plano completo + 30 dias de comunidade</p>
+                    <p class="offer-subtitle">Acesso imediato ao plano completo + 30 dias no canal de dicas</p>
 
                     <div class="offer-includes">
                         <h3>Você vai receber:</h3>
@@ -484,7 +484,7 @@
                             </div>
                             <div class="include-item highlight">
                                 <span class="check">✓</span>
-                                <span>Bônus: 30 dias na comunidade exclusiva</span>
+                                <span>Bônus: 30 dias no canal de dicas exclusivo (sem interação)</span>
                             </div>
                             <div class="include-item highlight">
                                 <span class="check">✓</span>
